Small update with fixed visibiliy-hidden for project due the level-1 review

--- a/src/blocks/cards/__cell/cards__cell.css
+++ b/src/blocks/cards/__cell/cards__cell.css
@@ -22,6 +22,10 @@
   transition-duration: 2s;
 }
 
+.cards__cell.visually-hidden {
+  display: none;
+}
+
 @media screen and (max-width : 950px) {
 .cards__cell {
     min-height: auto;
